# libdyldcache

./: .autotools  .cproject  .project  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  libdyldcache-1.0.pc  libdyldcache-1.0.pc.in
include/: Makefile.am
include/libdyldcache-1.0/: cache.h  image.h  libdyldcache.h  map.h
src/: Makefile.am  cache.c  image.c  map.c
tools/: Makefile.am  dbgcache.c  decache.c  dyldrop.c
